openshift/06-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-formularios-frontend
  labels:
    app: portal-formularios-frontend
spec:
  selector:
    app: portal-formularios-frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
