openshift/07-frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: portal-formularios-frontend
  labels:
    app: portal-formularios-frontend
spec:
  # Este host debe coincidir con WEB_ORIGIN en 02-backend-configmap.yaml.
  host: portal-formularios.apps.ocp4.mfpweb.local
  to:
    kind: Service
    name: portal-formularios-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
